finished up email/password firebase authentication for both web and electron, facebook and google firebase authentication for web not working on electron

--- a/src/app/desktopUI/login/login.component.scss
+++ b/src/app/desktopUI/login/login.component.scss
@@ -165,6 +165,35 @@
         border: 1px solid #272727;
         color: white;
     }
+
+    .spinner-section {
+        display: flex;
+        align-content: center;
+        align-items: center;
+        height: 60px;
+        z-index: 99;
+        background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+        position: fixed; /* Sit on top of the page content */
+
+    }
+      
+    .spinner-margin {
+        margin: 0 10px;
+    }
+
+    .overlay {
+        position: fixed; /* Sit on top of the page content */
+        display: none; /* Hidden by default */
+        width: 100%; /* Full width (cover the whole page) */
+        height: 100%; /* Full height (cover the whole page) */
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+        z-index: 98; /* Specify a stack order in case you're using a different order for other elements */
+        cursor: pointer; /* Add a pointer on hover */
+    }
 }
 
 @include SM{
@@ -207,6 +236,7 @@
         align-items: center;
         justify-content: center;
         width: 90%;
+        margin-right: 0.7rem;
     }
 
     .button{
@@ -239,7 +269,7 @@
         align-items: center;
         justify-content: center;
         width: 75%;
-        margin-right: 2rem;
+        margin-right: 1.2rem;
     }
 
     .card-content{
@@ -278,7 +308,7 @@
         align-items: center;
         justify-content: center;
         width: 70%;
-        margin-right: 2rem;
+        margin-right: 1.2rem;
     }
 
     .card-content{
@@ -317,7 +347,7 @@
         align-items: center;
         justify-content: center;
         width: 50%;
-        margin-right: 2rem;
+        margin-right: 1.2rem;
     }
 
     .card-content{
