--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,5 +9,7 @@ html, body {
 
 body { 
     margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    font-family: Gilroy, "Helvetica Neue", sans-serif;
+    color: #212529;
+    font-size: 1rem;
 }
