--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,12 +2,13 @@
 $text-color: #212529;
 $heading-color: #000000;
 
-$XSFontSize: clamp(0.8rem, 3.5vw, 0.975rem); 
+$XSFontSize: clamp(1rem, 3.5vw, 1.5rem); 
 $XSTitleSize: clamp(0.9rem, 3.5vw, 1rem);
 $SMFontSize: clamp(0.7rem, 2.5vw, 0.875rem);
 $MDFontSize: clamp(0.9rem, 2vw, 1rem);
 $LGFontSize: clamp(1rem, 2vw, 1rem);
 $XLFontSize: clamp(1rem, 1.8vw, 1.125rem);
+$XXLFontSize: clamp(1rem, 1.8vw, 1.125rem);
 
 
 
