--- a/src/app/desktopUI/contracts-list/contracts-list.component.html
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid wrapper">
-    <!-- <div class="wrapper"> -->
+    <mat-card class="contract-card">
         <div class="row">
             <div class="col-12">
                 <app-user-navbar></app-user-navbar>
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </mat-card>
 
 
 </div>
