--- a/src/app/desktopUI/contract-details/contract-details.component.scss
+++ b/src/app/desktopUI/contract-details/contract-details.component.scss
@@ -37,7 +37,7 @@
     .title-section{
         display: flex;
         flex-direction: row;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: center;
         padding-top: 1rem;
     }
