--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
     <span><img src="assets/logos/gigwork-logo.svg" class="logo" /><span class="logo-text">Gigworks</span></span>
     <nav>
         <ul class="horizontal-list">
@@ -8,7 +8,7 @@
         </ul>
     </nav>
 
-</header>
+</header> -->
 <div class="body-wrapper">
     <router-outlet></router-outlet>
 </div>
