--- a/src/app/desktopUI/contracts-list/contracts-list.component.html
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid wrapper">
-    <mat-card class="contract-card">
+    <mat-card class="contract-card mat-elevation-z0">
         <div class="row">
             <div class="col-12">
                 <app-user-navbar></app-user-navbar>
