--- a/src/app/desktopUI/login/login.component.html
+++ b/src/app/desktopUI/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid wrapper">
     <div class="row">
         <div class="col-12">
-            <mat-card class="login-card" >
+            <mat-card class="login-card mat-elevation-z0" >
                 <img src="assets/logos/gigwork-logo.svg" class="logo" /><span class="logo-text">Gigworks</span>
                 <div class="form-content m-0 p-0">
                     <img src="assets/logos/gigwork-logo-long.svg" class="logo-long" />
