--- a/src/app/desktopUI/login/login.component.scss
+++ b/src/app/desktopUI/login/login.component.scss
@@ -2,20 +2,20 @@
 
 @include XS{
     .wrapper{
-        background: #F1F1F1;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         height: 100vh;
+        overflow-y: auto;
+
     }
 
     .login-card{
         background: white;
-        // background: black;
-        height: calc( 100vh - 2.375rem );
+        height: calc( 100vh - 3rem );
         width: 95vw;
-        overflow-y: auto;
+        border-style:hidden;
     }
 
     .form-content{
