--- a/src/app/desktopUI/contract-details/contract-details.component.html
+++ b/src/app/desktopUI/contract-details/contract-details.component.html
@@ -8,8 +8,8 @@
                     <div class="title-section">
                         <mat-icon aria-hidden="false" aria-label="keyboard_arrow_left icon" class="control-icon">keyboard_arrow_left</mat-icon>
                         <div class="contract-title-block">
-                            <p class="contract-title">The Name of the Contract Long Name is...</p>
-                            <p class="client-name">Client's Name</p>
+                            <p class="contract-title">{{contract.contractName}}</p>
+                            <p class="client-name">{{contract.clientName}}</p>
                         </div>
                     </div>
                     <hr class="hr" />
@@ -35,7 +35,7 @@
                         </button>
                         <div class="week">
                             <p class="week-title">This week</p>
-                            <p class="week-text">15:00 hrs</p>
+                            <p class="week-text">{{contract.hours}}</p>
                         </div>
                     </div>
                 </div>
