--- a/src/app/desktopUI/contracts-list/contracts-list.component.scss
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.scss
@@ -148,6 +148,7 @@
             border-bottom: 1px solid rgba(0, 0, 0, 0.125);
             border-right: none;
             border-left: none;
+            cursor: pointer;
         }
 
         .list-content{
