--- a/src/app/desktopUI/contract-details/contract-details.component.html
+++ b/src/app/desktopUI/contract-details/contract-details.component.html
@@ -5,11 +5,11 @@
                 <app-user-navbar></app-user-navbar>
                 <div>
                     <hr class="hr" />
-                    <div class="title-section">
-                        <mat-icon aria-hidden="false" aria-label="keyboard_arrow_left icon" class="control-icon">keyboard_arrow_left</mat-icon>
+                    <div class="title-section" >
+                        <mat-icon style="cursor:pointer;" aria-hidden="false" aria-label="keyboard_arrow_left icon" class="control-icon" (click)="goBack()">keyboard_arrow_left</mat-icon>
                         <div class="contract-title-block">
-                            <p class="contract-title">{{contract.contractName}}</p>
-                            <p class="client-name">{{contract.clientName}}</p>
+                            <p class="contract-title">{{contract?.contractName}}</p>
+                            <p class="client-name">{{contract?.clientName}}</p>
                         </div>
                     </div>
                     <hr class="hr" />
@@ -35,7 +35,7 @@
                         </button>
                         <div class="week">
                             <p class="week-title">This week</p>
-                            <p class="week-text">{{contract.hours}}</p>
+                            <p class="week-text">{{contract?.hours}}</p>
                         </div>
                     </div>
                 </div>
