--- a/src/app/components/user-navbar/user-navbar.component.scss
+++ b/src/app/components/user-navbar/user-navbar.component.scss
@@ -16,7 +16,7 @@
 
         .user-icon{
             margin-right: 0.5rem;
-            width: 2rem;
+            width: 3rem;
 
         }
 
@@ -38,7 +38,8 @@
         // }
 
         .settings-icon{
-            font-size: 1.8rem;
+            font-size: 2.1rem;
+            margin-right: 2rem;
         }
     }
 }
