--- a/src/app/desktopUI/contract-details/contract-details.component.html
+++ b/src/app/desktopUI/contract-details/contract-details.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-12">
                 <app-user-navbar></app-user-navbar>
-                <div>
+                <div class="contract-title-section">
                     <hr class="hr" />
                     <div class="title-section" >
                         <mat-icon style="cursor:pointer;" aria-hidden="false" aria-label="keyboard_arrow_left icon" class="control-icon" (click)="goBack()">keyboard_arrow_left</mat-icon>
