--- a/src/app/desktopUI/contracts-list/contracts-list.component.scss
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.scss
@@ -136,6 +136,10 @@
         }
     }
 
+    .yes-contracts{
+        margin-top: 1rem;
+    }
+
     .contracts-list{
         .list-group-item {
             position: relative;
@@ -169,7 +173,7 @@
             font-family: Gilroy;
             font-style: normal;
             font-weight: 500;
-            font-size: 1rem;
+            font-size: 1.2rem;
             color: #212529;
         }
 
@@ -184,8 +188,32 @@
             font-family: Gilroy;
             font-style: normal;
             font-weight: 500;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             color: #898989;
         }
+    }
+
+    /* unvisited link */
+    a:link {
+        color: $text-color;
+        text-decoration: none;
+    }
+    
+    /* visited link */
+    a:visited {
+        color: $text-color;
+        text-decoration: none;
+    }
+    
+    /* mouse over link */
+    a:hover {
+        color: $text-color;
+        text-decoration: none;
+    }
+    
+    /* selected link */
+    a:active {
+        color: $text-color;
+        text-decoration: none;
     }
 }
