fixed up the contract list resolver and added a spinner component, which is used on the login in screen

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 // $primary: #F29422;
 $text-color: #212529;
 $heading-color: #000000;
+$primary-color: #FD6642;
 
 $XSFontSize: clamp(1rem, 3.5vw, 1.5rem); 
 $XSTitleSize: clamp(1.2rem, 3.5vw, 2rem);
