--- a/src/app/desktopUI/contracts-list/contracts-list.component.html
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.html
@@ -11,13 +11,13 @@
                     <input type="text" class="form-control" placeholder="Search" (keyup)="searchTerm($event)">
                 </div>
                 <p class="hour-text">Hours this week</p>
-                <!-- <hr class="hr" /> -->
+                <hr class="hr" *ngIf="!contracts.length"/>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12">
-                <div class="contract-list" *ngIf="!contracts?.length">
+                <div class="contract-list" *ngIf="!contracts.length">
                     <div class="no-contract">
                         <p class="no-contract-text">You have no open contracts</p>
                         <button mat-raised-button color="primary" class="button find-work" (click)="findWork()">Find work</button>
@@ -29,7 +29,7 @@
         
         <div class="row">
             <div class="col-12">
-                <div class="contracts-list" *ngIf="contracts?.length">
+                <div class="contracts-list" *ngIf="contracts.length">
                     <div class="yes-contracts">
                         <ul class="list-group">
                             <li class="list-group-item" *ngFor="let contract of contracts | filter:term" (click)="contractDetails($event, contract)">
