--- a/src/app/desktopUI/contracts-list/contracts-list.component.scss
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.scss
@@ -93,47 +93,48 @@
         }
     }
 
-    .contract-list{
+    .no-contract{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 45vh;
+        height: 55vh;
+    }
 
-        .no-contract{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+
+    .contract-text{
+        font-family: Gilroy;
+        font-style: normal;
+        font-weight: 500;
+        color: #212529;
+        @include SM{
+            font-size: $SMFontSize;
         }
-
-        .contract-text{
-            font-family: Gilroy;
-            font-style: normal;
-            font-weight: 500;
-            color: #212529;
-            @include SM{
-                font-size: $SMFontSize;
-            }
-            @include MD{
-                font-size: $MDFontSize;
-            }
-            @include LG{
-                font-size: $LGFontSize;
-            }
-            @include XL{
-                font-size: $XLFontSize;
-            }
+        @include MD{
+            font-size: $MDFontSize;
         }
-
-        .find-work{
-            width: 100%;
-            padding-top: 0.2rem;
-            padding-bottom: 0.2rem;
-            background-color: #FD6642;
-            border: 1px solid #FD6642;
-
+        @include LG{
+            font-size: $LGFontSize;
         }
+        @include XL{
+            font-size: $XLFontSize;
+        }
+    }
+
+    .find-work{
+        width: 50%;
+        padding-top: 0.2rem;
+        padding-bottom: 0.2rem;
+        background-color: #FD6642;
+        border: 1px solid #FD6642;
+
+    }
+
+    .no-contract-text{
+        font-weight: 600;
+        font-family: Gilroy;
+        font-style: normal;
+        font-size: 1rem;
     }
 
     .yes-contracts{
@@ -161,6 +162,8 @@
             justify-content: center;
             align-items: stretch;
         }
+
+
 
         .first-row{
             margin-bottom: 0.2rem;
