--- a/src/app/desktopUI/contract-details/contract-details.component.html
+++ b/src/app/desktopUI/contract-details/contract-details.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid wrapper">
+    <app-spinner *ngIf="isLoading"></app-spinner>
     <mat-card class="contract-card mat-elevation-z0">
         <div class="row">
             <div class="col-12">
@@ -6,7 +7,7 @@
                 <div class="contract-title-section">
                     <hr class="hr" />
                     <div class="title-section" >
-                        <mat-icon style="cursor:pointer;" aria-hidden="false" aria-label="keyboard_arrow_left icon" class="control-icon" (click)="goBack()">keyboard_arrow_left</mat-icon>
+                        <mat-icon style="cursor:pointer;" *ngIf="contract" aria-hidden="false" aria-label="keyboard_arrow_left icon" class="control-icon" (click)="goBack()">keyboard_arrow_left</mat-icon>
                         <div class="contract-title-block">
                             <p class="contract-title">{{contract?.contractName}}</p>
                             <p class="client-name">{{contract?.clientName}}</p>
@@ -23,7 +24,7 @@
                     <div class="counter">
                         <div class="current-session">
                             <p class="current-session-title">Current session</p>
-                            <p class="time" #timerCounter id="timer">0hrs 00m</p>
+                            <p class="time" #timerCounter id="timer">0hrs 00m 00s</p>
                         </div>
                         <div class="today">
                             <p class="today-title">Today</p>
