--- a/src/app/desktopUI/contracts-list/contracts-list.component.html
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid wrapper">
+    <app-spinner *ngIf="isLoading"></app-spinner>
     <mat-card class="contract-card mat-elevation-z0">
         <div class="row">
             <div class="col-12">
@@ -11,11 +12,11 @@
                     <input type="text" class="form-control" placeholder="Search" (keyup)="searchTerm($event)">
                 </div>
                 <p class="hour-text">Hours this week</p>
-                <hr class="hr" *ngIf="!contracts.length"/>
+                <hr class="hr" *ngIf="!contracts"/>
             </div>
         </div>
 
-        <div class="row" *ngIf="!contracts.length">
+        <div class="row" *ngIf="contracts.length === 0">
             <div class="col-12">
                 <div class="no-contract">
                     <p class="no-contract-text">You have no open contract</p>
@@ -24,13 +25,13 @@
             </div>
         </div>
 
-        <div class="row" *ngIf="contracts.length">
+        <div class="row" *ngIf="contracts">
             <div class="col-12">
                 <div class="contracts-list">
                     <div class="yes-contracts">
                         <ul class="list-group">
                             <li class="list-group-item" *ngFor="let contract of contracts | filter:term" (click)="contractDetails($event, contract)">
-                                <a [routerLink]="['/', 'contract-details', contract.id]">
+                                <a [routerLink]="['/', 'contract-details', contract.id]" class="contact-link">
                                     <div class="list-content">
                                         <div class="first-row">
                                             <span class="first-row-text">{{contract?.contractName}}</span>
@@ -40,8 +41,8 @@
                                             <span class="second-row-text">{{contract?.clientName}}</span>
                                             <span class="second-row-text">{{contract?.limit}}</span>
                                         </div>
-                                        <!-- <mat-icon aria-hidden="false" aria-label="keyboard_arrow_right icon" class="button-icon">keyboard_arrow_right</mat-icon> -->
                                     </div>
+                                    <mat-icon aria-hidden="false" aria-label="keyboard_arrow_right icon" class="next-page" *ngIf="contracts">keyboard_arrow_right</mat-icon>
                                 </a>
                             </li>
                         </ul>
