--- a/src/app/desktopUI/contracts-list/contracts-list.component.scss
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.scss
@@ -161,6 +161,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: stretch;
+            width: 98%;
         }
 
 
@@ -218,5 +219,20 @@
     a:active {
         color: $text-color;
         text-decoration: none;
+    }
+
+    .contact-link{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .next-page{
+        width: 2%;
+        margin-left: 0.3rem;
+        cursor: pointer;
+        font-size: 2rem;
+        align-self: flex-start;
+        color: #898989;
     }
 }
