--- a/src/scss/material-theme.scss
+++ b/src/scss/material-theme.scss
@@ -1,5 +1,5 @@
-@use '~@angular/material' as mat;
-@include mat.core();
+// @use '~@angular/material' as mat;
+// @include mat.core();
 
 // $custom-typography: mat-typography-config(
 //     $font-family: 'Gilroy'
@@ -7,17 +7,17 @@
 
 // @include mat.core($custom-typography);
 
-$my-primary: mat.define-palette(mat.$gigwork-primary-palette, 800);
-$my-accent: mat.define-palette(mat.$gigwork-primary-palette, A200, A100, A400);
-$my-warn: mat.define-palette(mat.$red-palette);
+// $my-primary: mat.define-palette(mat.$gigwork-primary-palette, 800);
+// $my-accent: mat.define-palette(mat.$gigwork-primary-palette, A200, A100, A400);
+// $my-warn: mat.define-palette(mat.$red-palette);
 
-$my-theme: mat.define-light-theme((
-    color: (
-        primary: $my-primary,
-        accent: $my-accent,
-        warn: $my-warn,
-    )
-));
+// $my-theme: mat.define-light-theme((
+//     color: (
+//         primary: $my-primary,
+//         accent: $my-accent,
+//         warn: $my-warn,
+//     )
+// ));
 
-@include mat.all-component-themes($my-theme);
+// @include mat.all-component-themes($my-theme);
 
