--- a/src/app/desktopUI/contracts-list/contracts-list.component.html
+++ b/src/app/desktopUI/contracts-list/contracts-list.component.html
@@ -16,7 +16,7 @@
             </div>
         </div>
 
-        <div class="row" *ngIf="contracts.length === 0">
+        <div class="row" *ngIf="contracts?.length === 0">
             <div class="col-12">
                 <div class="no-contract">
                     <p class="no-contract-text">You have no open contract</p>
